Removed "unused variable" compilation warning, and several "may be used uninitialized" warnings.
Removed obsolete routines:  

AddScans.c 
ReadStd.c 
AddChans.c 
FinalDump.c 
MakeSubHdr.c 
AddDumps.c 
GetAngle.c 

Removed obsolete options from ASPFitsReader:

-l
-stdfile
-a

are no longer used.

--RDF, 6 Mar 2009




git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@13 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,11 +31,11 @@ ALLEXECS = ASPFitsReader ASPStokes ASPCal ASPThetaBB ASPBinDown ASPRotate \
 #-------------------
 
 OBJS1 = ASPFitsReader.o CmdLine.o GetOptions.o GetChans.o GetOmit.o Sum.o \
-	Freq2Chan.o InitPars.o ReadCal.o GetCalData.o ReadASPHdr.o ReadStd.o \
+	Freq2Chan.o InitPars.o ReadCal.o GetCalData.o ReadASPHdr.o \
 	GetPoly.o cprofc.o ReadASPData.o MakeStokes.o PhaseShift.o PhaseCalc.o \
 	BinDown.o MakePol.o WriteStokes.o DutyLookup.o BMask.o Sort.o Zero.o \
-	MaxMin.o FindPeak.o RotateProf.o FitAngle.o GetChi.o GetAngle.o \
-	FitThetaBB.o FitMueller.o FinalDump.o WrtASPHdr.o WrtASPStokes.o \
+	MaxMin.o FindPeak.o RotateProf.o FitAngle.o GetChi.o \
+	FitThetaBB.o FitMueller.o WrtASPHdr.o WrtASPStokes.o \
 	Median.o
 
 OBJS2 = ffft.o fftfit.o cprof.o fccf.o brent.o 
