Added Sum.c routine to ASPAdd program, which is now reflected in the Makefile.
-- Robert Ferdman, 6 April, 2009



git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@28 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -64,7 +64,7 @@ MATCHOBJS = ASPMatch.o MatchCmdLine.o ReadASPAsc.o RotateProf.o cprofc.o \
 
 HEADOBJS = ASPHead.o HeadCmdLine.o
 
-ADDOBJS = ASPAdd.o AddCmdLine.o ReadASPHdr.o ReadASPStokes.o MakePol.o \
+ADDOBJS = ASPAdd.o AddCmdLine.o ReadASPHdr.o ReadASPStokes.o Sum.o MakePol.o \
 	Zero.o WriteStokes.o DutyLookup.o Sort.o FindPeak.o BMask.o
 
 TOAOBJS = ASPToa.o ToaCmdLine.o ReadASPAsc.o ReadASPHdr.o ReadASPStokes.o \
