Added Sum.o to ASPToa object list.
-- Robert Ferdman, 7 April, 2009



git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@38 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -68,7 +68,7 @@ ADDOBJS = ASPAdd.o AddCmdLine.o ReadASPHdr.o ReadASPStokes.o Sum.o MakePol.o \
 	Zero.o WriteStokes.o DutyLookup.o Sort.o FindPeak.o BMask.o
 
 TOAOBJS = ASPToa.o ToaCmdLine.o ReadASPAsc.o ReadASPHdr.o ReadASPStokes.o \
-	cprofc.o
+	Sum.o cprofc.o
 
 %.o: %.f
 	$(F77) $(F77FLAGS) $<
