New routine to take the difference between an ascii profile and a .stokes.fits file.
-- R. Ferdman, 12 Feb. 2010




git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@47 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -266,7 +266,7 @@ oneclean:
 	/bin/rm -f *.1
 
 clean:
-	make afrclean calclean thetaclean stokesclean bindownclean rotclean rotclean2 matchclean headclean addclean templateclean toaclean includeclean oneclean
+	make afrclean calclean thetaclean stokesclean bindownclean rotclean rotclean2 matchclean headclean addclean diffclean templateclean toaclean includeclean oneclean
 
 #distclean:
 #	/bin/rm -f Makefile config.h config.status config.cache config.log
