Added feature to ASPThetaBB that will take in a file as output by running "pacv -b" in psrchive.  This file will contain Stokes parameters for each input cal channel.  The format of this ascii file is:
channel_index  channel_freq  C1 C1err  C2 C2err  C3 C3err  C4 C4err

ASPThetaBB will then calculate atan2(C2, C3) for each frequency, and subtract the result from the corresponding ASPThetaBB calculated angle.

R. Ferdman, 3 October 2011





git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@106 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -77,7 +77,7 @@ CALOBJS = ASPCal.o CalCmdLine.o InitPars.o ReadHdr.o ReadASPHdr.o \
 THETAOBJS = ASPThetaBB.o ThetaCmdLine.o InitPars.o ReadHdr.o ReadASPHdr.o \
 	ReadPSRFITSHdr.o GetTelescope.o AllocRunMode.o GetCalData.o \
 	ReadData.o ReadASPData.o ReadPSRFITSData.o PhaseCalc.o MaxMin.o \
-	Sort.o Median.o Zero.o  
+	Sort.o Median.o Zero.o Freq2Chan.o
 
 BINDOWNOBJS = ASPBinDown.o BinDownCmdLine.o AllocRunMode.o BinDown.o \
 	MakePol.o Zero.o WriteStokes.o  DutyLookup.o Sort.o FindPeak.o BMask.o 
