arious bug fixes to ASPZap and associated routines.
More important:  major bug fix to ReadPSRFITSData.c, which now takes the current subint time stamp (offset from beginning of scan) from the OFFS_SUB column of the SUBINT table, instead of accumulating TSUBINT subint time durations.  The subint time is then added to the start time to get the time stamp for the particular subint.

This has solved issues relating to sinusoidal effects found in residuals of TOAs made using ASPFitsReader, for PSRFITS files.  This has now been fixed, and the effect has disappeared.

-- R. Ferdman, 20 Oct 2011




git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@107 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,7 @@ LCPGPLOT = -L$(PGPLOT_LIB_DIR) -lcpgplot -lpgplot  -L$(X11_LIB_DIR) -lX11 -lpng 
 
 
 ### C COMPILER AND FLAGS ###
-CC = gcc-4.2
+CC = gcc
 CFLAGS = -Wall -c -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR) -I$(PGPLOT_INCLUDE_DIR)
 # CFLAGS_NO_OPT = -Wall -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR) -I$(PGPLOT_INCLUDE_DIR)
 #CFLAGS_OPT2 = -Wall -O3 -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR)  -I$(PGPLOT_INCLUDE_DIR)
@@ -92,7 +92,8 @@ ROTATEOBJS = ASPRotate.o RotateCmdLine.o AllocRunMode.o RotateProf.o \
 
 ZAPOBJS = ASPZap.o ZapCmdLine.o AllocRunMode.o ReadASPAsc.o ReadHdr.o \
 	ReadASPHdr.o ReadPSRFITSHdr.o ReadData.o ReadASPData.o \
-	ReadPSRFITSData.o Dedisperse.o MakeStokes.o BMask.o Sort.o FindPeak.o \
+	ReadPSRFITSData.o Dedisperse.o GetPoly.o PhaseShift.o MakeStokes.o \
+	BMask.o Sort.o FindPeak.o \
 	DutyLookup.o MakePol.o Zero.o MaxMin.o ArrayZero.o BinDown.o cprofc.o \
 	RotateProf.o PhaseCalc.o
 
