- Upped the allowable number of entries in zap file to avoid segmentation faults
- Fixed ASPZap to allow multiple mouse-click frequency/time domain zap regions per session

- Added capability of ASPZap to accept an existing zap file to initialize zap array for a given data file.

-- R. Ferdman, 19 January 2012



git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@108 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -91,7 +91,7 @@ ROTATEOBJS = ASPRotate.o RotateCmdLine.o AllocRunMode.o RotateProf.o \
 	cprofc.o MakePol.o Zero.o WrtASPHdr.o WrtASPStokes.o ffft.o
 
 ZAPOBJS = ASPZap.o ZapCmdLine.o AllocRunMode.o ReadASPAsc.o ReadHdr.o \
-	ReadASPHdr.o ReadPSRFITSHdr.o ReadData.o ReadASPData.o \
+	ReadASPHdr.o ReadPSRFITSHdr.o Freq2Chan.o ReadData.o ReadASPData.o \
 	ReadPSRFITSData.o Dedisperse.o GetPoly.o PhaseShift.o MakeStokes.o \
 	BMask.o Sort.o FindPeak.o \
 	DutyLookup.o MakePol.o Zero.o MaxMin.o ArrayZero.o BinDown.o cprofc.o \
