Added ability to check hase information on TOA calculations with ASPToa.
Various bug fixes.

-- R. Ferdman, 14 April 2012



git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@111 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -117,7 +117,7 @@ TEMPLATEOBJS = ASPTemplate.o TemplateCmdLine.o ReadASPHdr.o AllocRunMode.o \
 	FindPeak.o BMask.o
 
 TOAOBJS = ASPToa.o ToaCmdLine.o ReadASPAsc.o ReadASPHdr.o ReadASPStokes.o \
-	Sum.o cprofc.o
+	Sum.o cprofc.o GetPoly.o PhaseCalc.o
 
 PHASEOBJS = GetPhases.o PhaseCmdLine.o GetPoly.o PhaseCalc.o # FileExists.o
 
